# atum

./: .dockerignore  .env.docker.example  .env.example  .env.k8s.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Dockerfile.admin  Dockerfile.android-build  Dockerfile.enrichment  Dockerfile.frontend  README.md  docker-compose.yml  historico-de-prompts.md  pyproject.toml  requirements.txt  scraper_test_results.txt
docker/: entrypoint-android-build.sh  entrypoint-api.sh  entrypoint.sh  generate-certs.sh  nginx.conf  security-headers.conf
docs/: AI_PROMPTS_ANALYSIS.md  ANDROID_BUILD.md  CODE_REVIEW_REPORT.md  FRONTEND_COMPLIANCE_ANALYSIS.md  POSICIONAMENTO.md  RADIO_SINTONIAS_PLAN.md  README.md  SCRAPERS_INVESTIGATION_REPORT.md  UX_UI_COHERENCE_ANALYSIS.md  WISHLIST.md  arquitetura-netflix-self-hosted.md  commands.md  configuration.md  database.md  docker-ghcr.md  feeds-and-scheduling.md  installation.md  rss-sources.md  troubleshooting.md  web-interface.md
frontend/: FRONTEND_STANDARDS.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend-admin/: index.html  package-lock.json  package.json  vite.config.ts
k8s/: configmap.yaml  kustomization.yaml  namespace.yaml  shared-pvcs.yaml  traefik-config.yaml  traefik-dashboard.yaml  traefik-letsencrypt.yaml  traefik-security-headers.yaml
scripts/: README.md  android-build-auto.ps1  android-build-docker.ps1  android-build-quick.ps1  android-build.ps1  apply-android-auto-patch.ps1  debug_libtorrent.py  investigate_corruption.py  k8s-reset-atum.ps1  profile.sh  serve.ps1  (+1 more)
(+450 files in other folders)
